<resources>
    <string name="app_name">Smart Home</string>

    <string name="action_home">Home</string>
    <string name="action_chart">Chart</string>
    <string name="action_setting">Setting</string>
    <string name="action_camera">Camera</string>
    <string name="action_voice">Voice</string>

    <string name="fragment_living_room">LIVING ROOM</string>
    <string name="fragment_bed_room">BED ROOM</string>
    <string name="fragment_dining_room">DINING ROOM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="led">led</string>
    <string name="your_ada">Setting your adafruit account</string>
    <string name="user_title">User name</string>
    <string name="user_hint">Adafruit user name</string>
    <string name="api_key_title">Key</string>
    <string name="api_key_hint">Adafruit key</string>
    <string name="save_button_text">submit</string>
    <string name="Thint">Temperator feed</string>
    <string name="huminity">Huminity</string>
    <string name="Hhint">Huminity feed</string>
    <string name="gas">Gas</string>
    <string name="Ghint">Gas feed</string>
    <string name="light">Light</string>
    <string name="Lhint">Light feed</string>
    <string name="fan">Fan</string>
    <string name="saving">saving</string>
    <string name="Fhint">Fan feed</string>
    <string name="temperator">Temperator</string>
    <string name="ai">AI</string>
    <string name="Ahint">AI feed</string>

</resources>