<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/colorPrimary"
                android:padding="16dp"
>
    <FrameLayout
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id = "@+id/frameLayoutT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <TextView
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_ada"
            android:textStyle="italic" android:id="@+id/textV"
            android:textColor="@color/cardview_light_background"

    />
    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_button"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:textColor="@color/cardview_light_background"
            android:text="@string/save_button_text"
            android:background = "@drawable/rounded_red"
            android:layout_gravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
    </FrameLayout>
    <androidx.core.widget.NestedScrollView
            android:layout_marginTop="60dp"
            android:layout_width="match_parent"
           android:layout_height="match_parent"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent" android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/frameLayoutT" tools:layout_editor_absoluteX="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id = "@+id/inputText"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:background="@drawable/body_shape">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_title"
                android:textSize="@dimen/title_text"
                android:paddingTop="16dp"
                app:layout_constraintVertical_bias="0.01"
                android:id="@+id/textView" app:layout_constraintTop_toTopOf="parent"
                />

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_pink"
                android:padding="@dimen/text_margin"
                android:autofillHints=""
                android:inputType="text"
                android:textColorHint="#D81B60"
                android:layout_below="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView"/>
        <TextView
                android:textSize="@dimen/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/api_key_title"
                android:paddingTop="16dp"
                app:layout_constraintVertical_bias="0.2"
                android:id="@+id/textView1"
                app:layout_constraintTop_toBottomOf="@+id/editUser"/>
        <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_margin"
                android:autofillHints=""
                android:inputType="text"
                android:background="@drawable/rounded_pink"
                android:id="@+id/editKey" android:textColorHint="#D81B60"
                app:layout_constraintTop_toBottomOf="@+id/textView1"/>
        <TextView
                android:textSize="@dimen/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temperator"
                android:paddingTop="16dp"
                android:id="@+id/textView2"
                tools:layout_editor_absoluteX="16dp"
                app:layout_constraintTop_toBottomOf="@+id/editKey"/>
        <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_margin"
                android:autofillHints=""
                android:inputType="text"
                android:background="@drawable/rounded_pink"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                android:id="@+id/editTopic1" android:textColorHint="#D81B60"
        />
        <TextView
                android:paddingTop="16dp"
                android:textSize="@dimen/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/huminity"
                app:layout_constraintVertical_bias="0.5"
                android:id="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/editTopic1"/>
        <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_margin"
                android:autofillHints=""
                android:inputType="text"
                android:background="@drawable/rounded_pink"
                android:id="@+id/editTopic2" android:textColorHint="#D81B60"
                app:layout_constraintTop_toBottomOf="@+id/textView3"/>
        <TextView
                android:paddingTop="16dp"
                android:textSize="@dimen/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gas"
                app:layout_constraintVertical_bias="0.3"
                android:id="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/editTopic2"
        />
        <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                
                android:padding="@dimen/text_margin"
                android:autofillHints=""
                android:inputType="text"
                android:background="@drawable/rounded_pink"
                android:id="@+id/editTopic3" android:textColorHint="#D81B60"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
        />
        <TextView
                android:paddingTop="16dp"
                android:textSize="@dimen/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/light"
                app:layout_constraintVertical_bias="0.3"
                android:id="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/editTopic3"
        />
        <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_margin"
                android:autofillHints=""
                android:inputType="text"
                android:background="@drawable/rounded_pink"
                android:id="@+id/editTopic4" android:textColorHint="#D81B60"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
        />
        <TextView
                android:paddingTop="16dp"
                android:textSize="@dimen/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fan"
                app:layout_constraintVertical_bias="0.3"
                android:id="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/editTopic4"
        />
        <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                
                android:padding="@dimen/text_margin"
                android:autofillHints=""
                android:inputType="text"
                android:background="@drawable/rounded_pink"
                android:id="@+id/editTopic5" android:textColorHint="#D81B60"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
        />
        <TextView
                android:paddingTop="16dp"
                android:textSize="@dimen/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ai"
                app:layout_constraintVertical_bias="0.3"
                android:id="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/editTopic5"
        />
        <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_margin"
                android:autofillHints=""
                android:inputType="text"
                android:background="@drawable/rounded_pink"
                android:id="@+id/editTopic6" android:textColorHint="#D81B60"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>